--- a/projects.json
+++ b/projects.json
@@ -1,154 +1,214 @@
 {
-    "projects": [
-      {
-        "id": 1,
-        "title": "Project 1: Dynamic Webpage",
-        "logoImage": {
-          "src": "img/PokedexLogo.png",
-          "alt": "Full Logo for Pokedex",
-          "style": {
-            "height": "60px"
-          }
-        },
-        "links": [
-          {
-            "text": "Live App",
-            "url": "https://eahowell.github.io/pokedex-js-app/",
-            "title": "Link to the live app"
-          },
-          {
-            "text": "Repository",
-            "url": "https://github.com/eahowell/pokedex-js-app",
-            "title": "Link to project github repository"
-          }
-        ],
-        "description": "This is a a small web application with HTML, CSS, and JavaScript that loads data from an external API and enables the viewing of data points in detail.",
-        "stack": "This app uses HTML, CSS, and JavaScript",
-        "role": [
-          "Build the frontend interface displaying a list of Pokémon, when clicked upon the details of the selected Pokémon will appear in a popup.",
-          "Reading in the data from the API, parsing the info, and displaying the details of each Pokémon."
-        ],
-        "learnings": [
-          "Load data from an external source (API)",
-          "Creating and using Modals",
-          "Design a dynamic site",
-          "Using Bootstrap for styling"
-        ],
-        "technologies": [
-          "JavaScript",
-          "jQuery",
-          "Polyfill",
-          "Bootstrap",
-          "CSS",
-          "HTML",
-          "Prettier"
-        ]
+  "projects": [
+    {
+      "id": 1,
+      "title": "Project 1: Dynamic Webpage",
+      "logoImage": {
+        "src": "img/PokedexLogo.png",
+        "alt": "Full Logo for Pokedex",
+        "style": {
+          "height": "60px"
+        }
       },
-      {
-        "id": 2,
-        "title": "Project 2: SPA Web App",
-        "logoImage": {
-          "src": "img/myFlixLogo-Light.png",
-          "alt": "Full Logo for myFlix app",
-          "style": {
-            "height": "60px"
-          }
+      "links": [
+        {
+          "text": "Live App",
+          "url": "https://eahowell.github.io/pokedex-js-app/",
+          "title": "Link to the live app"
         },
-        "links": [
-          {
-            "text": "Live App",
-            "url": "https://eahowell-myflix.netlify.app/",
-            "title": "Link to the live app"
-          },
-          {
-            "text": "Frontend Repository",
-            "url": "https://github.com/eahowell/myFlix-client",
-            "title": "Link to project github repository for the frontend code"
-          },
-          {
-            "text": "Backend Repository",
-            "url": "https://github.com/eahowell/movie_api",
-            "title": "Link to project github repository for the backend code"
-          }
-        ],
-        "description": "This is a full stack web application of a movie application that provides a list of movies with details including the description, directors, and actors. A user can create a profile and add movies to their favorites and a to watch list.",
-        "stack": "This app uses the MERN (MongoDB, Express, React, and Node. js) stack",
-        "role": [
-          "Frontend interface to display the movies (and movie details) and user profile setup and managements",
-          "Backend server with the database and the API to access the database"
-        ],
-        "learnings": [
-          "Build architected database with MongoDB",
-          "Create a REST API with proper user documentation",
-          "Design a Single Page Application using React"
-        ],
-        "technologies": [
-          "JavaScript",
-          "Express",
-          "Mongoose",
-          "React",
-          "Redux",
-          "Parcel",
-          "JSON Web Token",
-          "MongoDB",
-          "Heroku",
-          "Netlify",
-          "Bootstrap",
-          "CSS",
-          "HTML",
-          "Prettier"
-        ]
+        {
+          "text": "Repository",
+          "url": "https://github.com/eahowell/pokedex-js-app",
+          "title": "Link to project github repository"
+        }
+      ],
+      "description": "This is a a small web application with HTML, CSS, and JavaScript that loads data from an external API and enables the viewing of data points in detail.",
+      "stack": "This app uses HTML, CSS, and JavaScript",
+      "role": [
+        "Build the frontend interface displaying a list of Pokémon, when clicked upon the details of the selected Pokémon will appear in a popup.",
+        "Reading in the data from the API, parsing the info, and displaying the details of each Pokémon."
+      ],
+      "learnings": [
+        "Load data from an external source (API)",
+        "Creating and using Modals",
+        "Design a dynamic site",
+        "Using Bootstrap for styling"
+      ],
+      "technologies": [
+        "JavaScript",
+        "jQuery",
+        "Polyfill",
+        "Bootstrap",
+        "CSS",
+        "HTML",
+        "Prettier"
+      ]
+    },
+    {
+      "id": 2,
+      "title": "Project 2: SPA Web App",
+      "logoImage": {
+        "src": "img/myFlixLogo-Light.png",
+        "alt": "Full Logo for myFlix app",
+        "style": {
+          "height": "60px"
+        }
       },
-      {
-        "id": 3,
-        "title": "Project 3: PWA Web App",
-        "logoImage": {
-          "src": "img/CliqueUpLogo.png",
-          "alt": "Full Logo for CliqueUp app",
+      "links": [
+        {
+          "text": "Live App",
+          "url": "https://eahowell-myflix.netlify.app/",
+          "title": "Link to the live app"
+        },
+        {
+          "text": "Frontend Repository",
+          "url": "https://github.com/eahowell/myFlix-client",
+          "title": "Link to project github repository for the frontend code"
+        },
+        {
+          "text": "Backend Repository",
+          "url": "https://github.com/eahowell/movie_api",
+          "title": "Link to project github repository for the backend code"
+        }
+      ],
+      "description": "This is a full stack web application of a movie application that provides a list of movies with details including the description, directors, and actors. A user can create a profile and add movies to their favorites and a to watch list.",
+      "stack": "This app uses the MERN (MongoDB, Express, React, and Node. js) stack",
+      "role": [
+        "Frontend interface to display the movies (and movie details) and user profile setup and managements",
+        "Backend server with the database and the API to access the database"
+      ],
+      "learnings": [
+        "Build architected database with MongoDB",
+        "Create a REST API with proper user documentation",
+        "Design a Single Page Application using React"
+      ],
+      "technologies": [
+        "JavaScript",
+        "Express",
+        "Mongoose",
+        "React",
+        "Redux",
+        "Parcel",
+        "JSON Web Token",
+        "MongoDB",
+        "Heroku",
+        "Netlify",
+        "Bootstrap",
+        "CSS",
+        "HTML",
+        "Prettier"
+      ]
+    },
+    {
+      "id": 3,
+      "title": "Project 3: PWA Web App",
+      "logoImage": {
+        "src": "img/CliqueUpLogo.png",
+        "alt": "Full Logo for CliqueUp app",
+        "style": {
+          "height": "60px"
+        }
+      },
+      "links": [
+        {
+          "text": "Live App",
+          "url": "https://eahowell.github.io/meet/",
+          "title": "Link to the live app"
+        },
+        {
+          "text": "Repository",
+          "url": "https://github.com/eahowell/meet",
+          "title": "Link to project github repository"
+        }
+      ],
+      "description": "Goal was to build a serverless, progressive web application (PWA) with React using a test-driven development (TDD) technique. The application uses the Google Calendar API to fetch upcoming events.",
+      "stack": "This app uses React, Rechart, AWS Lambda, OAuth, Google Cloud, Google Calendar API. The testing uses React Testing Library, Jest, Jest-Cucumber, and Puppeteer",
+      "role": [
+        "Set up the serverless function using AWS Lambda and hosted on AWS",
+        "Set up the Authorization Server using Google OAuth to provide the access tokens needed to access to the Google Calendar API",
+        "Build a progressive web app using React to that allowed users to filter by city, show/hide event details, specify the number of events to display, use the app offline,  add a home screen shortcut, and display charts visualizing event details"
+      ],
+      "learnings": [
+        "Set up a serverless functions using AWS Lambda",
+        "Set up an Authorization Server",
+        "Design a Progressive Web Application using React",
+        "Create unit, integration, and end-to-end testing"
+      ],
+      "technologies": [
+        "JavaScript",
+        "React",
+        "Recharts",
+        "AWS Lambda",
+        "Google Cloud OAuth",
+        "Jest",
+        "Jest-Cucumber",
+        "Puppeteer",
+        "Bootstrap",
+        "CSS",
+        "HTML",
+        "Prettier",
+        "ESLint"
+      ]
+    },
+    {
+      "id": 4,
+      "title": "Project 4: React NAtive App",
+      "logoImage": {
+        "src": "img/ChatlyLogo.png",
+        "alt": "Full Logo for Chatly app",
+        "style": {
+          "height": "60px"
+        }
+      },
+      "links": [
+        {
+          "text": "Repository",
+          "url": "https://github.com/eahowell/chat-app",
+          "title": "Link to project github repository"
+        }
+      ],
+      "description": "This is a mobile chat application built with React Native. It provides users with a chat interface and options to share images and their location.",
+      "stack": "This app uses React, Node, JavaScript, React Native, Expo, Google Firestore, Google Firebase, and Gifted Chat",
+      "role": [
+        "Build a React Native App using JavaScript",
+        "Build the chat UI with Accessibly",
+        "Authenticate users using Firebase",
+        "Store conversations in Firestore Database"
+      ],
+      "learnings": [
+        "Create a native app",
+        "Use device's location, microphone, and camera",
+        "Use an emulator for mobile testing",
+        "Online and Offline Data Storage"
+      ],
+      "technologies": [
+        "Node",
+        "JavaScript",
+        "React",
+        "React Native Gifted Chat",
+        "Expo Go",
+        "Android Studio",
+        "Google Firestore Database",
+        "Firebase Cloud Storage",
+        "Prettier",
+        "ESLint"
+      ],
+      "images": [
+        {
+          "src": "img/Chatly-Actions.gif",
+          "alt": "Chatly Action Demonstration",
           "style": {
-            "height": "60px"
+            "height": "300px"
           }
         },
-        "links": [
-          {
-            "text": "Live App",
-            "url": "https://eahowell.github.io/meet/",
-            "title": "Link to the live app"
-          },
-          {
-            "text": "Repository",
-            "url": "https://github.com/eahowell/meet",
-            "title": "Link to project github repository"
-          }          
-        ],
-        "description": "Goal was to build a serverless, progressive web application (PWA) with React using a test-driven development (TDD) technique. The application uses the Google Calendar API to fetch upcoming events.",
-        "stack": "This app uses React, Rechart, AWS Lambda, OAuth, Google Cloud, Google Calendar API. The testing uses React Testing Library, Jest, Jest-Cucumber, and Puppeteer",
-        "role": [
-          "Set up the serverless function using AWS Lambda and hosted on AWS",
-          "Set up the Authorization Server using Google OAuth to provide the access tokens needed to access to the Google Calendar API",
-          "Build a progressive web app using React to that allowed users to filter by city, show/hide event details, specify the number of events to display, use the app offline,  add a home screen shortcut, and display charts visualizing event details"
-        ],
-        "learnings": [
-          "Set up a serverless functions using AWS Lambda",
-          "Set up an Authorization Server",
-          "Design a Progressive Web Application using React",
-          "Create unit, integration, and end-to-end testing"
-        ],
-        "technologies": [
-          "JavaScript",
-          "React",
-          "Recharts",
-          "AWS Lambda",
-          "Google Cloud OAuth",
-          "Jest",
-          "Jest-Cucumber",
-          "Puppeteer",
-          "Bootstrap",
-          "CSS",
-          "HTML",
-          "Prettier",
-          "ESLint"
-        ]
-      }
-    ]
-  }
+        {
+          "src": "img/Chatly-OfflineMode.gif",
+          "alt": "Chatly Chat Screen with Online and Offline funtioonalities",
+          "style": {
+            "height": "300px"
+          }
+        }
+      ]
+    }
+  ]
+}
