--- a/projects.json
+++ b/projects.json
@@ -221,7 +221,7 @@
     },
     {
       "id": 4,
-      "title": "Project 4: React NAtive App",
+      "title": "Project 4: React Native App",
       "logoImage": {
         "src": "img/ChatlyLogo.png",
         "alt": "Full Logo for Chatly app",
