Add Note to project about it being part of CF Program

--- a/projects.json
+++ b/projects.json
@@ -23,6 +23,7 @@
         }
       ],
       "description": "This is a a small web application with HTML, CSS, and JavaScript that loads data from an external API and enables the viewing of data points in detail.",
+      "notes": "This project was part of my Full-Stack Web Developer Program with CareerFoundry.",
       "stack": "This app uses HTML, CSS, and JavaScript",
       "loginData": ["No login required"],
       "role": [
@@ -94,6 +95,7 @@
         }
       ],
       "description": "This is a full stack web application using React for the client side. The movie application provides a list of movies with details including the description, directors, and actors. A user can create a profile and add movies to their favorites and a to watch list.",
+      "notes": "This project was part of my Full-Stack Web Developer Program with CareerFoundry.",
       "loginData": [ "Username : testportfolio | Password : 12345678" ],
       "stack": "This app uses the MERN (MongoDB, Express, React, and Node. js) stack",
       "role": [
@@ -182,6 +184,7 @@
         }
       ],
       "description": "Goal was to build a serverless, progressive web application (PWA) with React using a test-driven development (TDD) technique. The application uses the Google Calendar API to fetch upcoming events.",
+      "notes": "This project was part of my Full-Stack Web Developer Program with CareerFoundry.",
       "loginData": ["Requires Google Account for OAuth login"],
       "stack": "This app uses React, Rechart, AWS Lambda, OAuth, Google Cloud, Google Calendar API. The testing uses React Testing Library, Jest, Jest-Cucumber, and Puppeteer",
       "role": [
@@ -252,6 +255,7 @@
         }
       ],
       "description": "This is a mobile chat application built with React Native. It provides users with a chat interface and options to share images and their location.",
+      "notes": "This project was part of my Full-Stack Web Developer Program with CareerFoundry.",
       "loginData": ["No login required, however the repository must be cloned, installed, and then run on an emulator or device. See the README for instructions."],
       "stack": "This app uses React, Node, JavaScript, React Native, Expo, Google Firestore, Google Firebase, and Gifted Chat",
       "role": [
@@ -337,6 +341,7 @@
         }
       ],
       "description": "This is a full stack web application using Angular for the client side. This uses the backend created in Project 2. The movie application provides a list of movies with details including the description, directors, and actors. A user can create a profile and add movies to their favorites and a to watch list.",
+      "notes": "This project was part of my Full-Stack Web Developer Program with CareerFoundry.",
       "loginData": [ "Username : testportfolio | Password : 12345678" ],
       "stack": "This app uses the MEAN (MongoDB, Express, Angular, and Node. js) stack",
       "role": [
